--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,33 @@
 /Tests/vs2012/vc110.pdb
 /Tests/vs2012/x64
 
-# /src/IPhreeqcPhast/
+# backup files
+*~
+
+# autotools
+aclocal.m4
+configure
+Makefile.in
+autom4te.cache/
+config/
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+
+
+# ignore directories beginning with '_'
+/_*/
+/OLD/
+/vs2019/
+
+# dist files
+configure.ac.dist
+Makefile.am.dist
+doc/NOTICE.TXT.dist
+doc/README.TXT.dist
+src/PhreeqcRM.h.dist
+src/IPhreeqcPhast/IPhreeqc/IPhreeqc.h.dist
+src/IPhreeqcPhast/IPhreeqc/Version.h.dist
+CMakeLists.txt.dist
