This works on windows -- cmake version 3.21.2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,20 +2,20 @@ cmake_minimum_required (VERSION 3.10)
 
 project (PhreeqcRM CXX C)
 
-function (ixm::exit variable access value current stack)
-  message(STATUS "variable=${variable}")
-  message(STATUS "access=${access}")
-  message(STATUS "value=${value}")
-  message(STATUS "current=${current}")
-  message(STATUS "stack=${stack}")
-  if (NOT(access MATCHES "READ_ACCESS"))
-    ##message(FATAL_ERROR "STOPPING")
-  endif()
-endfunction()
-##variable_watch(MPI_Fortran_F77_HEADER_DIR ixm::exit)
-##variable_watch(MPI_FORTRAN_FOUND ixm::exit)
-##variable_watch(MPI_Fortran_WORKS ixm::exit)
-variable_watch(MPI_RESULT_Fortran_test_mpi_F77_HEADER ixm::exit)
+# function (ixm::exit variable access value current stack)
+#   message(STATUS "variable=${variable}")
+#   message(STATUS "access=${access}")
+#   message(STATUS "value=${value}")
+#   message(STATUS "current=${current}")
+#   message(STATUS "stack=${stack}")
+#   if (NOT(access MATCHES "READ_ACCESS"))
+#     ##message(FATAL_ERROR "STOPPING")
+#   endif()
+# endfunction()
+# ##variable_watch(MPI_Fortran_F77_HEADER_DIR ixm::exit)
+# ##variable_watch(MPI_FORTRAN_FOUND ixm::exit)
+# ##variable_watch(MPI_Fortran_WORKS ixm::exit)
+# variable_watch(MPI_RESULT_Fortran_test_mpi_F77_HEADER ixm::exit)
 
 # check if this is the root project
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
@@ -419,6 +419,10 @@ if (STANDALONE_BUILD EQUAL 1 AND MSVC)
   endif()
 endif()
 
+##{{
+add_library(PhreeqcRM::PhreeqcRM ALIAS PhreeqcRM)
+##}}
+
 if (STANDALONE_BUILD EQUAL 1)
   # tests
   enable_testing()
@@ -427,6 +431,7 @@ if (STANDALONE_BUILD EQUAL 1)
   add_subdirectory(database)
   add_subdirectory(doc)
   add_subdirectory(Doxygen)
+  add_subdirectory(swig)
   add_subdirectory(Tests)
 endif()
 
@@ -455,8 +460,8 @@ if (MSVC)
   endforeach()
 endif()
 
-get_cmake_property(_variableNames VARIABLES)
-list (SORT _variableNames)
-foreach (_variableName ${_variableNames})
-  message(STATUS "${_variableName}=${${_variableName}}")
-endforeach()
+# get_cmake_property(_variableNames VARIABLES)
+# list (SORT _variableNames)
+# foreach (_variableName ${_variableNames})
+#   message(STATUS "${_variableName}=${${_variableName}}")
+# endforeach()
