WIP: this works don't want to lose

--- a/swig/CMakeLists.txt
+++ b/swig/CMakeLists.txt
@@ -29,12 +29,44 @@ configure_file(advection_cpp.py advection_cpp.py COPYONLY)
 # phreeqcrm-bmi.i
 set_property(SOURCE phreeqcrm-bmi.i PROPERTY SWIG_MODULE_NAME phreeqcrm)
 set_property(SOURCE phreeqcrm-bmi.i PROPERTY CPLUSPLUS ON)
-swig_add_library(phreeqcrm LANGUAGE python SOURCES phreeqcrm-bmi.i)
+set_property(SOURCE phreeqcrm-bmi.i PROPERTY SWIG_FLAGS "-includeall")
+set_property(SOURCE phreeqcrm-bmi.i PROPERTY SWIG_FLAGS "-Wall")
+swig_add_library(phreeqcrm LANGUAGE python SOURCES phreeqcrm-bmi.i ${PhreeqcRM_SOURCES})
+## swig_add_library(phreeqcrm LANGUAGE python SOURCES phreeqcrm-bmi.i ${PhreeqcRM_SOURCES})
+###set_property(TARGET phreeqcrm PROPERTY SWIG_COMPILE_DEFINITIONS NO_NAMELESS_UNION IPQ_DLL_EXPORT)
+set_property(TARGET phreeqcrm PROPERTY SWIG_COMPILE_DEFINITIONS NO_NAMELESS_UNION)
+
+# target_include_directories(phreeqcrm
+#   PUBLIC
+#   $<BUILD_INTERFACE:${PhreeqcRM_SOURCE_DIR}/src>
+#   $<BUILD_INTERFACE:${PhreeqcRM_SOURCE_DIR}/src/IPhreeqcPhast>
+#   $<BUILD_INTERFACE:${PhreeqcRM_SOURCE_DIR}/src/IPhreeqcPhast/IPhreeqc>
+#   $<BUILD_INTERFACE:${PhreeqcRM_SOURCE_DIR}/src/IPhreeqcPhast/IPhreeqc/phreeqcpp>
+#   $<BUILD_INTERFACE:${PhreeqcRM_SOURCE_DIR}/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common>
+#   $<BUILD_INTERFACE:${PhreeqcRM_SOURCE_DIR}/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PhreeqcKeywords>
+#   # $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+# )
+
+set(PhreeqcRM_SOURCE_DIR "/home/charlton/source/repos/coupled/phreeqcrm/")
+
+set_property(TARGET phreeqcrm PROPERTY SWIG_INCLUDE_DIRECTORIES ${PhreeqcRM_SOURCE_DIR}/src)
+set_property(TARGET phreeqcrm PROPERTY SWIG_INCLUDE_DIRECTORIES ${PhreeqcRM_SOURCE_DIR}/src/IPhreeqcPhast)
+set_property(TARGET phreeqcrm PROPERTY SWIG_INCLUDE_DIRECTORIES ${PhreeqcRM_SOURCE_DIR}/src/IPhreeqcPhast/IPhreeqc)
+set_property(TARGET phreeqcrm PROPERTY SWIG_INCLUDE_DIRECTORIES ${PhreeqcRM_SOURCE_DIR}/src/IPhreeqcPhast/IPhreeqc/phreeqcpp)
+set_property(TARGET phreeqcrm PROPERTY SWIG_INCLUDE_DIRECTORIES ${PhreeqcRM_SOURCE_DIR}/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common)
+set_property(TARGET phreeqcrm PROPERTY SWIG_INCLUDE_DIRECTORIES ${PhreeqcRM_SOURCE_DIR}/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PhreeqcKeywords)
+
+
+# target_compile_definitions(phreeqcrm
+#   PRIVATE
+#     NO_NAMELESS_UNION
+# )
+
 
 target_link_libraries(phreeqcrm
   PRIVATE
     Python::Python
-    PhreeqcRM::PhreeqcRM
+    ###PhreeqcRM::PhreeqcRM
 )
 
 if (MSVC AND BUILD_SHARED_LIBS)
