--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ src/phreeqcrm.mod
 # re-encoded files
 src/IPhreeqcPhast/IPhreeqc/phreeqcpp/print.utf-8.cpp
 src/IPhreeqcPhast/IPhreeqc/phreeqcpp/print.windows-1252.cpp
+
+# TEMP
+pybind/build/
