--- a/src/swig/CMakeLists.txt
+++ b/src/swig/CMakeLists.txt
@@ -1,5 +1,5 @@
 include(${SWIG_USE_FILE})
 
-if (PHREEQCRM_BUILD_PYTHON)
-  add_subdirectory(python)
-endif()
+# if (PHREEQCRM_BUILD_PYTHON)
+#   add_subdirectory(python)
+# endif()
