--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -163,9 +163,9 @@ jobs:
         phreeqcrm_build_mpi: [ON]
         phreeqcrm_fortran_testing: [OFF]
         phreeqcrm_with_yaml_cpp: [OFF]
-        include:
-          # - os: macos-12
-          #   toolchain: {compiler: gcc, version: 10}
+        # include:
+        #   - os: macos-12
+        #     toolchain: {compiler: gcc, version: 10}
         exclude:
           - os: macos-12
             toolchain: {compiler: intel}
