--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -150,7 +150,7 @@ jobs:
       fail-fast: false
       matrix:
         # os: [ubuntu-22.04, macos-12, windows-2019, windows-2022]
-        os: [windows-2019, windows-2022]
+        os: [ubuntu-22.04]
         toolchain:
           # - {compiler: gcc, version: 9}
           # - {compiler: gcc, version: 13}
