--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -152,8 +152,8 @@ jobs:
         # os: [ubuntu-22.04, macos-12, windows-2019, windows-2022]
         os: [ubuntu-22.04]
         toolchain:
-          # - {compiler: gcc, version: 9}
-          # - {compiler: gcc, version: 13}
+          - {compiler: gcc, version: 9}
+          - {compiler: gcc, version: 13}
           - {compiler: intel, version: '2022.1'}
           - {compiler: intel, version: '2022.2'}
           - {compiler: intel, version: '2023.0'}
@@ -166,8 +166,8 @@ jobs:
           - {compiler: intel-classic, version: '2021.10'}
         build_shared_libs: [ON]
         build_type: [Release]
-        # mpi: ['mpich', 'ompi', 'impi', 'msmpi']  # see https://github.com/mpi4py/setup-mpi/blob/master/setup-mpi.sh
-        mpi: ['impi']  # see https://github.com/mpi4py/setup-mpi/blob/master/setup-mpi.sh
+        mpi: ['mpich', 'ompi', 'impi', 'msmpi']  # see https://github.com/mpi4py/setup-mpi/blob/master/setup-mpi.sh
+        # mpi: ['impi']  # see https://github.com/mpi4py/setup-mpi/blob/master/setup-mpi.sh
         phreeqcrm_build_mpi: [ON]
         phreeqcrm_fortran_testing: [ON]
         phreeqcrm_with_yaml_cpp: [OFF]
