Always cat LastTest.log

--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -144,6 +144,7 @@ jobs:
       - run: ctest --output-on-failure --test-dir build
 
       - run: cat ${{ github.workspace }}/build/Testing/Temporary/LastTest.log
+        if: always()
 
       - run: cat build/phreeqcrm.pc
 
@@ -291,5 +292,6 @@ jobs:
       - run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build-mpi
 
       - run: cat ${{ github.workspace }}/build-mpi/Testing/Temporary/LastTest.log
+        if: always()
 
       - run: cat ${{ github.workspace }}/build-mpi/phreeqcrm.pc
