--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -18,6 +18,8 @@ jobs:
         os: [ubuntu-22.04, macos-12, windows-2019, windows-2022]
         toolchain:
           # - {compiler: gcc, version: 9}
+          - {compiler: gcc, version: 11}          # default gnu on ubuntu-22.04
+          - {compiler: gcc, version: 12}          # default gnu on macos-12
           - {compiler: gcc, version: 13}
           # - {compiler: intel, version: '2022.1'}
           # - {compiler: intel, version: '2022.2'}
@@ -33,18 +35,15 @@ jobs:
         build_type: [Release]        
         phreeqcrm_fortran_testing: [OFF]
         phreeqcrm_with_yaml_cpp: [OFF]
-        include:
-        #   - os: macos-12
-        #     toolchain: {compiler: gcc, version: 10}
-          - os: macos-12
-            toolchain: {compiler: gcc, version: 12}
-          - os: ubuntu-22.04
-            toolchain: {compiler: gcc, version: 11}
         exclude:
           - os: macos-12
             toolchain: {compiler: intel}
           - os: macos-12
             toolchain: {compiler: gcc, version: 9}
+          - os: macos-12
+            toolchain: {compiler: gcc, version: 11}
+          - os: ubuntu-22.04
+            toolchain: {compiler: gcc, version: 12}
           - os: windows-2019
             toolchain: {compiler: gcc}
           - os: windows-2022
