Disable ubuntu-22.04/intel-classic[mpich,ompi]

--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -201,6 +201,12 @@ jobs:
           - os: ubuntu-22.04
             toolchain: {compiler: intel}
             mpi: 'ompi'
+          - os: ubuntu-22.04
+            toolchain: {compiler: intel-classic}
+            mpi: 'mpich'
+          - os: ubuntu-22.04
+            toolchain: {compiler: intel-classic}
+            mpi: 'ompi'
           - os: ubuntu-22.04        
             toolchain: {compiler: gcc, version: 9}  # gcc too old for mpich?
             mpi: 'mpich'
