Updated to add intel runtime directory to TestRM

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -268,8 +268,25 @@ set_property(TARGET TestRM APPEND
 if(MSVC AND BUILD_SHARED_LIBS)
   # copy PhreeqcRM dll
   add_custom_command(TARGET TestRM POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:PhreeqcRM> $<TARGET_FILE_DIR:TestRM>
+    COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:TestRM> $<TARGET_RUNTIME_DLLS:TestRM>
+    COMMAND_EXPAND_LISTS
   )
+endif()
+
+# Add intel runtime path for testing TestRM
+#
+## message(STATUS "CMAKE_Fortran_COMPILER_ID=${CMAKE_Fortran_COMPILER_ID}")
+## message(STATUS "CMAKE_CXX_COMPILER_ID=${CMAKE_CXX_COMPILER_ID}")
+if(DEFINED ENV{ONEAPI_ROOT})
+  if(WIN32 AND (${CMAKE_Fortran_COMPILER_ID} MATCHES "Intel") OR (${CMAKE_CXX_COMPILER_ID} MATCHES "Intel"))
+    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+      # 64 bits
+      set_tests_properties(TestRM PROPERTIES ENVIRONMENT "PATH=$ENV{ONEAPI_ROOT}\\compiler\\latest\\windows\\redist\\intel64_win\\compiler;$ENV{PATH}")
+    elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
+      # 32 bits
+      set_tests_properties(TestRM PROPERTIES ENVIRONMENT "PATH=$ENV{ONEAPI_ROOT}\\compiler\\latest\\windows\\redist\\ia32_win\\compiler;$ENV{PATH}")
+    endif()
+  endif()
 endif()
 
 if(MSVC AND PHREEQCRM_WITH_YAML_CPP)
