--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -140,6 +140,9 @@ jobs:
 
       - run: cmake --build build
 
+      - run: dir -Recurse build/Tests
+        if: runner.os == 'Windows'
+
       - run: ctest --output-on-failure --test-dir build
 
       - run: cat ${{ github.workspace }}/build/Testing/Temporary/LastTest.log
