--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -143,10 +143,14 @@ jobs:
       - run: dir -Recurse build/Tests
         if: runner.os == 'Windows'
 
+      - run: dir $env:ONEAPI_ROOT/compiler
+        if: runner.os == 'Windows'
+
       - run: ctest --output-on-failure --test-dir build
+        id: ctest
 
       - run: cat ${{ github.workspace }}/build/Testing/Temporary/LastTest.log
-        if: always()
+        if: success() || steps.ctest.conclusion == 'failure'
 
       - run: cat build/phreeqcrm.pc
 
