--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -274,17 +274,16 @@ if(MSVC AND BUILD_SHARED_LIBS)
 endif()
 
 # Add intel runtime path for testing TestRM
+# github actions doesn't restore the lastest link correctly (when restoring from cache)
 #
 ## message(STATUS "CMAKE_Fortran_COMPILER_ID=${CMAKE_Fortran_COMPILER_ID}")
 ## message(STATUS "CMAKE_CXX_COMPILER_ID=${CMAKE_CXX_COMPILER_ID}")
-if(DEFINED ENV{ONEAPI_ROOT})
+if(DEFINED ENV{ONEAPI_ROOT} AND NOT DEFINED ENV{GITHUB_ACTIONS})
   if(WIN32 AND (${CMAKE_Fortran_COMPILER_ID} MATCHES "Intel") OR (${CMAKE_CXX_COMPILER_ID} MATCHES "Intel"))
     if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-      # 64 bits
-      set_tests_properties(TestRM PROPERTIES ENVIRONMENT "PATH=$ENV{ONEAPI_ROOT}\\compiler\\2023.2.0\\windows\\redist\\intel64_win\\compiler;$ENV{PATH}")
+      set_tests_properties(TestRM PROPERTIES ENVIRONMENT "PATH=$ENV{ONEAPI_ROOT}\\compiler\\latest\\windows\\redist\\intel64_win\\compiler;$ENV{PATH}")
     elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
-      # 32 bits
-      set_tests_properties(TestRM PROPERTIES ENVIRONMENT "PATH=$ENV{ONEAPI_ROOT}\\compiler\\2023.2.0\\windows\\redist\\ia32_win\\compiler;$ENV{PATH}")
+      set_tests_properties(TestRM PROPERTIES ENVIRONMENT "PATH=$ENV{ONEAPI_ROOT}\\compiler\\latest\\windows\\redist\\ia32_win\\compiler;$ENV{PATH}")
     endif()
   endif()
 endif()
