--- a/.github/workflows/setup-fortran.yml
+++ b/.github/workflows/setup-fortran.yml
@@ -11,6 +11,7 @@ env:
 
 jobs:
   test:
+    if: ${{ false }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -322,12 +323,12 @@ jobs:
           -L
         if: ${{ matrix.phreeqcrm_with_yaml_cpp != 'ON' }}
 
-
       - run: cmake --build ${{ github.workspace }}/build-mpi
 
       - run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build-mpi
+        id: ctest
 
       - run: cat ${{ github.workspace }}/build-mpi/Testing/Temporary/LastTest.log
-        if: always()
+        if: success() || steps.ctest.conclusion == 'failure'
 
       - run: cat ${{ github.workspace }}/build-mpi/phreeqcrm.pc
